--- a/banque-simple/banque-simple.csproj
+++ b/banque-simple/banque-simple.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>banque_simple</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Net.test.Sdk" Version="16.8.3" />
+    <PackageReference Include="Nunit" Version="3.12.0" />
+    <PackageReference Include="Nunit3TestAdapter" Version="3.17.0" />
+  </ItemGroup>
+
 </Project>
