--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ banque-simple/bin/Debug/netcoreapp3.0/banque-simple.dll
 banque-simple/bin/Debug/netcoreapp3.0/banque-simple.pdb
 banque-simple/obj/Debug/netcoreapp3.0/banque-simple.dll
 banque-simple/obj/Debug/netcoreapp3.0/banque-simple.pdb
+banque-simple/obj/Debug/netcoreapp3.0/banque-simple.assets.cache
