--- a/banque-funtests/banque-funtests.csproj
+++ b/banque-funtests/banque-funtests.csproj
@@ -3,13 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <RootNamespace>banque</RootNamespace>
+    <RootNamespace>banque_funtests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Net.test.Sdk" Version="16.8.3" />
     <PackageReference Include="Nunit" Version="3.12.0" />
     <PackageReference Include="Nunit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Moq" Version="4.15.2" />
   </ItemGroup>
 
 </Project>
