--- a/banque-funtests/banque-funtests.csproj
+++ b/banque-funtests/banque-funtests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Nunit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Moq" Version="4.15.2" />
+    <ProjectReference Include = "..\banque-simple\banque-simple.csproj" />
   </ItemGroup>
 
 </Project>
