--- a/banque-simple/banque-simple.csproj
+++ b/banque-simple/banque-simple.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Net.test.Sdk" Version="16.8.3" />
     <PackageReference Include="Nunit" Version="3.12.0" />
     <PackageReference Include="Nunit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="NunitXml.TestLogger" Version="2.1.80" />
   </ItemGroup>
 
 </Project>
